# ir_tools

./: .gitignore  Manifest.toml  Project.toml  calculate_correlated_flux.py  calculate_mass_fraction.py  compare_data.py  compare_deprojection.py  compare_nights.py  create_proposal_csv.py  data_collection.py  data_quality.py  finish_data.py  get_array.py  get_obs_type.py  gravity.py  make_observations_csv.py  matisse.py  overview.py  pionier.py  plot.py  pyproject.toml  query.py  read_gravity_data.py  remake_model_plots.py  utils.py
calculations/: calculate_relative_fluxes.py  manual_fit.py  mass_fraction.py
instrument_prep/: add_instrument.py  pionier.py
ir-tools/: pyproject.toml  tables.py  utils.py  variables.py
ir-tools/calculations/: convert_lazareff.py  flux_ratio.py  gas_mass.py  make_sed.py  manual_fit.py  mass_fraction.py  opacities.py  optool_opacities.py  permutation.py  relative_fluxes.py  resolution.py  star_radius.py  temperatures.jl  temperatures.py
ir-tools/checks/: compare_opacity_weights.py  compare_opactities_boekel.py
ir-tools/combinations/: opacities.py
ir-tools/computations/: compute_optool.py  mass_fraction.py
ir-tools/fit_results/: disc.py  ring.py
ir-tools/fits/: average_flux.py  downsample_fits.py  get_obs_type.py  make_average_flux_fits.py  make_temperature_fits.py
ir-tools/fits_files/: add_instrument.py  average_flux.py  check_tpl_start.py  downsample.py  downsample_fits.py  flag.py  gravity.py  make_temperature_fits.py  matisse.py  pionier.py
ir-tools/fitting/: model.py  monochromatic.py  panchromatic.py  zero_crossing.py
ir-tools/hd142527/: ring_fit.py
ir-tools/instrument_prep/: gravity.py  (+2 more)
ir_tools/: sort_data.sh  tables.py  variables.py
obs/: query.py
plot/: plot.py
plots/: overview.py  plot.py  remake_model_plots.py  variability.py
(+74 files in other folders)
