[project]
name = "ir-tools"
version = "0.1.0"
description = "A collection of tools used to work with interferometric data."
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

keywords = ["astronomy", "data-analysis", "data-reduction", "interferometry"]
authors = [
	{name = "Marten Scheuck", email = "martenscheuck@gmail.com"}
]

classifiers = [
	"Development Status :: 2 - Alpha",
	"Framework :: Pytest",
	"Framework :: Sphinx",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.9",
	"Topic :: Scientific/Engineering :: Astronomy",
	"Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "astropy>=6.0.1",
    "astroquery>=0.4.7",
    "joblib>=1.4.2",
    "matadrs",
    "matplotlib>=3.9.2",
    "numpy>=1.26.4",
    "oimodeler",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ppdmod",
    "pylatex>=1.4.2",
    "scipy>=1.13.1",
    "skycalc-cli>=1.4",
    "tqdm>=4.66.5",
    "uncertainties>=3.2.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ir-tools*"]

[tool.uv]
dev-dependencies = [
    "numpydoc>=1.8.0",
    "pydata-sphinx-theme>=0.16.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "sphinx>=7.4.7",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=2.3.0",
]

[tool.uv.sources]
oimodeler = { path = "../oimodeler", editable = true }
ppdmod = { path = "../ppdmod", editable = true }
matadrs = { path = "../matadrs", editable = true }

[project.urls]
repository = "https://github.com/MBSck/ir-tools"
